added initial implementation of GET /categories endpoint
